--- a/appz.yml
+++ b/appz.yml
@@ -1,20 +1,32 @@
 app:
     name: prometheus
-    code: Prometheus
+    code: prometheus
     notify: appzdev@cloudbourne.co
+
 build:
-    version: 2.0
+    version: 2.17
     env: DEV
     build_file: none
     output_files: output/*.zip
-    image_template: prometheus-2.0
-    image_name: alpha/prometheus
+    image_template: prometheus-2.17
+
 deploy:
     context: alpha/DEV
+    type: statefulset
     replicas: 1
     port:
     - 9090
-monitor:
-    notify: appzops@cloudbourne.co      
+
+volumes:
+  - claim: prometheus-data
+    mount: /appz/data
+    name: data
+    size: 5Gi
+  - claim: prometheus-backup
+    mount: /appz/backup
+    name: backup
+    size: 5Gi
+  
 properties:
-    revision: 01
+    TARGET: "nodeexporter:9100"
+    revision : 25
