--- a/appz.yml
+++ b/appz.yml
@@ -24,6 +24,5 @@ volumes:
     size: 50Gi
   
 properties:
-    TARGET: 
-    - "192.168.61.173:9100"
+    TARGET: "192.168.61.173:9100"
     revision : 27
