--- a/appz.yml
+++ b/appz.yml
@@ -1,7 +1,7 @@
 app:
     name: prometheus
     code: prometheus
-    notify: appz@ecloudcontrol.com
+    notify: aborra@ecloudcontrol.com
 
 build:
     version: 2.17
