--- a/prometheus.yml
+++ b/prometheus.yml
@@ -36,22 +36,22 @@ scrape_configs:
     static_configs:
       - targets: ['192.168.61.173:9100','192.168.61.186:9100']
 
-  - job_name: kubernetes-cadvisor
-    honor_timestamps: true
-    scrape_interval: 15s
-    scrape_timeout: 10s
-    metrics_path: /metrics/cadvisor
-    scheme: https
-    bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
-    tls_config:
-        ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-        insecure_skip_verify: true
-    kubernetes_sd_configs:
-    - role: node
-    relabel_configs:
-    - separator: ;
-      regex: __meta_kubernetes_node_label_(.+)
-      replacement: $1
-      action: labelmap
-
+        #  - job_name: kubernetes-cadvisor
+        #    honor_timestamps: true
+        #    scrape_interval: 15s
+        #    scrape_timeout: 10s
+        #    metrics_path: /metrics/cadvisor
+        #    scheme: https
+        #    bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+        #    tls_config:
+        #        ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+        #        insecure_skip_verify: true
+        #    kubernetes_sd_configs:
+        #    - role: node
+        #    relabel_configs:
+        #    - separator: ;
+        #      regex: __meta_kubernetes_node_label_(.+)
+        #      replacement: $1
+        #      action: labelmap
+        #
 
