--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -34,7 +34,7 @@ scrape_configs:
 
   - job_name: 'node-exporter'
     static_configs:
-      - targets: [192.168.61.193:9100','192.168.61.173:9100','192.168.61.186:9100']
+      - targets: ['192.168.61.193:9100','192.168.61.173:9100','192.168.61.186:9100']
 
         #  - job_name: kubernetes-cadvisor
         #    honor_timestamps: true
