--- a/alerts.yaml
+++ b/alerts.yaml
@@ -24,3 +24,15 @@ groups:
       description: 'Memory usage threshold set to `80%`.'
       summary: "Memory usage is `{{humanize $value}}%`"
       host: "{{$labels.instance}}"
+
+- name: Disk-usage-check
+  rules:
+  - alert: Host Out Of DiskSpace
+    expr: (node_filesystem_avail_bytes * 100) / node_filesystem_size_bytes < 20 and ON (instance, device, mountpoint) node_filesystem_readonly == 0
+    for: 2m
+    labels:
+      severity: warning
+    annotations:
+      title: "Low Disk space"
+      summary: Host out of disk space (instance {{ $labels.instance }})
+      description: "Disk is getting full (< 20% left)\n  Available Space is only= {{ $value }} %\n  LABELS = {{ $labels }}"
