--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -30,11 +30,11 @@ scrape_configs:
   
   - job_name: 'kube-state-metrics'
     static_configs:
-      - targets: ['192.168.138.92:30000']
+      - targets: ['172.31.28.19:30000']
 
   - job_name: 'node-exporter'
     static_configs:
-      - targets: ['192.168.138.92:9100','192.168.164.7:9100','192.168.97.118:9100']
+      - targets: ['192.168.138.92:9100','192.168.164.7:9100','192.168.97.118:9100','172.31.17.121:9100','172.31.28.19:9100','172.31.25.240:9100']
 
         #  - job_name: kubernetes-cadvisor
         #    honor_timestamps: true
