--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -35,23 +35,8 @@ scrape_configs:
   - job_name: 'node-exporter'
     static_configs:
       - targets: ['192.168.138.92:9100','192.168.164.7:9100','192.168.97.118:9100','172.31.17.121:9100','172.31.28.19:9100','172.31.25.240:9100']
-
-        #  - job_name: kubernetes-cadvisor
-        #    honor_timestamps: true
-        #    scrape_interval: 15s
-        #    scrape_timeout: 10s
-        #    metrics_path: /metrics/cadvisor
-        #    scheme: https
-        #    bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
-        #    tls_config:
-        #        ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-        #        insecure_skip_verify: true
-        #    kubernetes_sd_configs:
-        #    - role: node
-        #    relabel_configs:
-        #    - separator: ;
-        #      regex: __meta_kubernetes_node_label_(.+)
-        #      replacement: $1
-        #      action: labelmap
-        #
-
+    relabel_configs:
+      - source_labels: [nodename]
+        regex: 'k8s-worker-node-1'
+        target_label: nodename
+        replacement: 'node0'
