--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -36,7 +36,7 @@ scrape_configs:
     static_configs:
       - targets: ['192.168.138.92:9100','192.168.164.7:9100','192.168.97.118:9100','172.31.17.121:9100','172.31.28.19:9100','172.31.25.240:9100']
     relabel_configs:
-      - source_labels: [nodename]
+      - source_labels: [__name__]
         regex: 'k8s-worker-node-1'
         target_label: nodename
         replacement: 'node0'
