--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -28,13 +28,9 @@ scrape_configs:
     static_configs:
     - targets: ['localhost:9090']
   
-  - job_name: 'kube-state-metrics'
-    static_configs:
-      - targets: ['172.31.28.19:30000']
-
   - job_name: 'node-exporter'
     static_configs:
-      - targets: ['192.168.138.92:9100','192.168.164.7:9100','192.168.97.118:9100','172.31.17.121:9100','172.31.28.19:9100','172.31.25.240:9100']
+      - targets: ['192.168.61.193:9100','192.168.61.173:9100','192.168.61.186:9100']
     relabel_configs:
       - source_labels: [__name__]
         regex: 'k8s-worker-node-1'
