--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -27,3 +27,9 @@ scrape_configs:
   - job_name: 'node-exporter'
     static_configs:
     - targets: ['192.168.61.193:9100','192.168.61.173:9100','192.168.61.186:9100']
+    relabel_configs:
+      - source_labels: [nodename]
+        regex: 'k8s-worker-node-1'
+        target_label: nodename
+        replacement: 'node0'
+        
