--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -28,8 +28,8 @@ scrape_configs:
     static_configs:
     - targets: ['192.168.61.193:9100','192.168.61.173:9100','192.168.61.186:9100']
     relabel_configs:
-      - source_labels: [nodename]
-        regex: 'k8s-worker-node-1'
+      - source_labels: [ nodename ]
+        regex: 'k8s.worker.node.1'
         target_label: nodename
-        replacement: 'node0'
+        replacement: 'worker-node0'
         
