--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -27,7 +27,7 @@ scrape_configs:
   - job_name: 'node-exporter'
     static_configs:
     - targets: ['192.168.61.193:9100','192.168.61.173:9100','192.168.61.186:9100']
-    relabel_configs:
+    metric_relabel_configs:
       - source_labels: [ nodename ]
         regex: '.*'
         target_label: nodename
