--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -26,14 +26,13 @@ scrape_configs:
   
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['192.168.61.193:9100','192.168.61.173:9100','192.168.61.186:9100']
+    - targets: ['172.31.17.121:9100','172.31.28.19:9100','172.31.25.240:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(engine.master)'
         target_label: nodename
         replacement: appz-${1}
       - source_labels: ['nodename']
-        regex: 'k8s.(.*)'
+        regex: 'k8s.worker.node.(.*)'
         target_label: nodename
-        replacement: appz-${1}
-        
+        replacement: appz-dev-worker-${1}}
