--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -26,7 +26,7 @@ scrape_configs:
   
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['192.168.61.193:9100','192.168.61.173:9100','192.168.61.186:9100']
+    - targets: ['192.168.61.193:9100','192.168.61.173:9100','192.168.61.186:9100','192.168.61.189:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(engine.master)'
