--- a/appz.yml
+++ b/appz.yml
@@ -1,7 +1,7 @@
 app:
     name: prometheus
     code: prometheus
-    notify: eachakala@ecloudcontrol.com
+    notify: appzdev@cloudbourne.co
 
 build:
     version: 2.17
@@ -24,4 +24,4 @@ volumes:
     size: 50Gi
   
 properties:
-    revision : 44
+    revision : 45
