--- a/alerts.yaml
+++ b/alerts.yaml
@@ -15,21 +15,20 @@ groups:
 
 - name: Memory-usage
   rules:
-  - alert: 'High memory usage'
-    expr: ceil((((node_memory_MemTotal_bytes - node_memory_MemFree_bytes - node_memory_Buffers_bytes - node_memory_Cached_bytes) / node_memory_MemTotal_bytes) * 100)) > 80
+  - alert: HostOutOfMemory
+    expr: node_memory_MemAvailable_bytes / node_memory_MemTotal_bytes * 100 < 10
+    for: 5m
     labels:
-      severity: 'critical'
+      severity: warning
     annotations:
-      title: "Memory Usage"
-      description: 'Memory usage threshold set to `80%`.'
-      summary: "Memory usage is `{{humanize $value}}%`"
-      host: "{{$labels.instance}}"
+      summary: Host out of memory (instance {{ $labels.instance }})
+      description: "Node memory is filling up (< 10% left)\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
 
 - name: Disk-usage-check
   rules:
   - alert: Host Out Of DiskSpace
     expr: (node_filesystem_avail_bytes * 100) / node_filesystem_size_bytes < 20 and ON (instance, device, mountpoint) node_filesystem_readonly == 0
-    for: 2m
+    for: 5m
     labels:
       severity: warning
     annotations:
@@ -41,7 +40,7 @@ groups:
   rules:
   - alert: HostHighCpuLoad
     expr: 100 - (avg by(instance) (rate(node_cpu_seconds_total{mode="idle"}[2m])) * 100) > 80
-    for: 2m
+    for: 5m
     labels:
       severity: warning
     annotations:
