--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -23,6 +23,10 @@ scrape_configs:
   - job_name: 'prometheus'
     static_configs:
     - targets: ['localhost:9090']
+    
+  - job_name: 'prometheus'
+    static_configs:
+    - targets: ['hellonode-0-1:8080']  
   
   - job_name: 'node-exporter'
     static_configs:
