--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -24,7 +24,7 @@ scrape_configs:
     static_configs:
     - targets: ['localhost:9090']
     
-  - job_name: 'prometheus'
+  - job_name: 'hellonode'
     static_configs:
     - targets: ['hellonode-0-1:8080']  
   
