--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -26,7 +26,7 @@ scrape_configs:
   
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['192.168.61.193:9100','192.168.61.233:9100','192.168.61.196:9100','192.168.61.184:9100']
+    - targets: ['172.31.7.240:9100','172.31.1.176:9100','172.31.18.212:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(engine.master)'
