--- a/alerts.yaml
+++ b/alerts.yaml
@@ -50,13 +50,13 @@ groups:
 - name:  Pod level alert 
   rules:
   - alert: ContainerCpuUsage
-    expr: avg(sum(rate(container_cpu_usage_seconds_total{name!=""}[5m])) BY (instance, name) * 1000)  > 80 
+    expr: avg(rate(container_cpu_usage_seconds_total{image!="",container_name!="POD"}[5m])*100) by (pod) > 60 
     for: 5m
     labels:
       severity: warning
     annotations:
       summary: Container CPU usage
-      description: "Average Container CPU usage is above 40%\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+      description: "Average Container CPU usage is above 60%\n  pod= {{$POD}} VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
   - alert: KubernetesPodCrashLooping
     expr: increase(kube_pod_container_status_restarts_total[1m]) > 3
     for: 2m
