--- a/alerts.yaml
+++ b/alerts.yaml
@@ -47,15 +47,15 @@ groups:
       title: "Low Disk space"
       summary: Host out of disk space (instance {{ $labels.instance }})
       description: "Disk is getting full (< 10% left)\n  Available Space is only= {{ $value }} %\n  LABELS = {{ $labels }}"
-      
-  - alert: PodCpuUsage
+ - name: HighPodCPU     
+  - alert: HighCpuUsage
     expr: avg(rate(container_cpu_usage_seconds_total{namespace!="",image!="",container_name!="POD"}[5m])*100) by (pod,namespace  )  > 60
-    for: 10m
+    for: 15m
     labels:
       severity: warning
     annotations:
-      summary: Pod CPU usage
-      description: "  POD CPU AVG VALUE = {{ $value }} for 15m \n  LABELS = {{ $labels }} namespace: {{ $labels.namespace }} podname = {{ $labels.pod }}"
+      summary: HighCpuUsage
+      description: "  Pod cpu average value = {{ $value }}  \n  namespace: {{ $labels.namespace }} \n podname = {{ $labels.pod }}"
       
   - alert: KubernetesPodCrashLooping
     expr: increase(kube_pod_container_status_restarts_total[1m]) > 3
