--- a/alerts.yaml
+++ b/alerts.yaml
@@ -47,7 +47,8 @@ groups:
       title: "Low Disk space"
       summary: Host out of disk space (instance {{ $labels.instance }})
       description: "Disk is getting full (< 10% left)\n  Available Space is only= {{ $value }} %\n  LABELS = {{ $labels }}"
- - name: HighPodCPU     
+ - name: HighPodCPU
+   rules:
   - alert: HighCpuUsage
     expr: avg(rate(container_cpu_usage_seconds_total{namespace!="",image!="",container_name!="POD"}[5m])*100) by (pod,namespace  )  > 30
     for: 15m
