--- a/alerts.yaml
+++ b/alerts.yaml
@@ -47,24 +47,23 @@ groups:
       title: "Low Disk space"
       summary: Host out of disk space (instance {{ $labels.instance }})
       description: "Disk is getting full (< 10% left)\n  Available Space is only= {{ $value }} %\n  LABELS = {{ $labels }}"
-      
-      
- - name: HighPodCPU
-   rules:
-   - alert: HighCpuUsage
-     expr: avg(rate(container_cpu_usage_seconds_total{namespace!="",image!="",container_name!="POD"}[5m])*100) by (pod,namespace  )  > 30
-     for: 15m
-     labels:
-       severity: warning
-     annotations:
-       summary: HighCpuUsage
-       description: "  Pod cpu average value = {{ $value }}  \n  namespace: {{ $labels.namespace }} \n podname = {{ $labels.pod }}"
-      
-   - alert: KubernetesPodCrashLooping
-     expr: increase(kube_pod_container_status_restarts_total[1m]) > 3
-     for: 2m
-     labels:
-       severity: warning
-     annotations:
-       summary: Kubernetes pod crash looping (instance {{ $labels.instance }})
-       description: "Pod {{ $labels.pod }} is crash looping\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+
+- name: High-Pod-CPU
+  rules:
+  - alert: HighCpuUsage
+    expr: avg(rate(container_cpu_usage_seconds_total{namespace!="",image!="",container_name!="POD"}[5m])*100) by (pod,namespace  )  > 30
+    for: 15m
+    labels:
+      severity: warning
+    annotations:
+      summary: HighCpuUsage
+      description: "  Pod cpu average value = {{ $value }}  \n  namespace: {{ $labels.namespace }} \n podname = {{ $labels.pod }}"
+     
+  - alert: KubernetesPodCrashLooping
+    expr: increase(kube_pod_container_status_restarts_total[1m]) > 3
+    for: 2m
+    labels:
+      severity: warning
+    annotations:
+      summary: Kubernetes pod crash looping (instance {{ $labels.instance }})
+      description: "Pod {{ $labels.pod }} is crash looping\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
