--- a/alerts.yaml
+++ b/alerts.yaml
@@ -67,3 +67,14 @@ groups:
     annotations:
       summary: Kubernetes pod crash looping (instance {{ $labels.instance }})
       description: "Pod {{ $labels.pod }} is crash looping\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+      
+- name: CPU-load
+  rules:
+  - alert: HostHighCpuLoad
+    expr: 100 - (avg by(instance) (rate(node_cpu_seconds_total{mode="idle"}[15m])) * 100) > 80
+    for: 5m
+    labels:
+      severity: warning
+    annotations:
+      summary: Host high CPU load (instance {{ $labels.instance }})
+      description: "CPU load is > 80% \n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
