--- a/alerts.yaml
+++ b/alerts.yaml
@@ -50,10 +50,9 @@ groups:
 - name: CPU-load
   rules:
   - alert: HighNodeCPU
-    expr: 100 - (avg by(instance) (irate(node_cpu_seconds_total{mode="idle"}[5m])) * 100) > 70
-  for: 10m
-  labels:
-    severity: warning
-  annotations:
-    summary: "High CPU load (instance {{ $labels.instance }})"
-    description: "CPU load is high\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
+    expr: '100 - (avg by(instance) (rate(node_cpu_seconds_total{mode="idle"}[2m])) * 100) > 80'
+    labels:
+      severity: warning
+    annotations:
+      summary: "High CPU load (instance {{ $labels.instance }})"
+      description: "CPU load is high\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
