--- a/alerts.yaml
+++ b/alerts.yaml
@@ -50,7 +50,8 @@ groups:
 - name: CPU-load
   rules:
   - alert: HighNodeCPU
-    expr: '100 - (avg by(instance) (rate(node_cpu_seconds_total{mode="idle"}[2m])) * 100) > 80'
+    expr: node_load15 / count by (instance, job) (node_cpu_seconds_total{mode="idle"}) >= 8
+    for : 5m
     labels:
       severity: warning
     annotations:
