--- a/alerts.yaml
+++ b/alerts.yaml
@@ -39,13 +39,13 @@ groups:
 - name: High-Pod-CPU
   rules:
   - alert: HighPodCPU
-    expr: avg(rate(container_cpu_usage_seconds_total{namespace!="",image!="",container_name!="POD"}[5m])*100) by (pod,namespace  )  > 60
+    expr: avg(rate(container_cpu_usage_seconds_total{namespace!="",image!="",container_name!="POD"}[5m])*100) by (pod,namespace  )  > 90
     for: 15m
     labels:
       severity: warning
     annotations:
       summary: HighCpuUsage
-      description: 'Pod cpu average value : {{ $value | printf "%.2f" }}  \n  namespace : {{ $labels.namespace }} \n podname : {{ $labels.pod }}'
+      description: "Pod cpu average value : {{ $value | printf '%.2f' }}  \n  namespace : {{ $labels.namespace }} \n podname : {{ $labels.pod }}"
      
 - name: CPU-load
   rules:
