--- a/alerts.yaml
+++ b/alerts.yaml
@@ -1,5 +1,16 @@
 groups:
 
+- name: Cpu-usage
+  rules:
+  - alert: HostHighCpuLoad
+    expr: 100 - (avg by(instance) (rate(node_cpu_seconds_total{mode="idle"}[2m])) * 100) > 95
+    for: 3m
+    labels:
+      severity: warning
+    annotations:
+      summary: Host high CPU load (instance {{ $labels.instance }})
+      description: "CPU load is > 95%\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+      
 - name: Disk-usage
   rules:
   - alert: 'Low data disk space'
