--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -3,18 +3,8 @@ global:
   scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
   evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
   # scrape_timeout is set to the global default (10s).
-
-# Alertmanager configuration
-alerting:
-  alertmanagers:
-  - static_configs:
-    - targets:
-       - alert-manager-0-2:9093
-
-# Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
-rule_files:
-   - /opt/bitnami/prometheus/conf/rules.yaml 
-   - /opt/bitnami/prometheus/conf/alerts.yaml
+  external_labels:
+    datacenter: secondary
 
 # A scrape configuration containing exactly one endpoint to scrape:
 # Here it's Prometheus itself.
@@ -23,19 +13,7 @@ scrape_configs:
   - job_name: 'prometheus'
     static_configs:
     - targets: ['localhost:9090']
-  
-  - job_name: 'node-exporter'
-    static_configs:
-    - targets: ['172.31.17.121:9100','172.31.28.19:9100','172.31.25.240:9100']
-    metric_relabel_configs:
-      - source_labels: ['nodename']
-        regex: '(engine.master)'
-        target_label: nodename
-        replacement: appz-${1}
-      - source_labels: ['nodename']
-        regex: 'k8s.(.*)'
-        target_label: nodename
-        replacement: appz-${1}
+
   - job_name: 'kube-state-metrics'
     static_configs:
     - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
