--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -36,6 +36,31 @@ scrape_configs:
         regex: 'k8s.(.*)'
         target_label: nodename
         replacement: appz-${1}
+        
+  - job_name: 'node-exporter'
+    static_configs:
+    - targets: ['172.31.17.121:9100','172.31.28.19:9100','172.31.25.240:9100','192.168.103.189','192.168.163.143','192.168.130.193']
+    metric_relabel_configs:
+      - source_labels: ['nodename']
+        regex: '(engine.master)'
+        target_label: nodename
+        replacement: appz-${1}
+      - source_labels: ['nodename']
+        regex: 'k8s.worker.node.(.*)'
+        target_label: nodename
+        replacement: appz-dev-worker-${1}
+      - source_labels: ['nodename']
+        regex: 'ip-192-168-103-189.us-east-2.compute.internal'
+        target_label: nodename
+        replacement: appz-qa-worker-1
+      - source_labels: ['nodename']
+        regex: 'ip-192-168-163-143.us-east-2.compute.internal'
+        target_label: nodename
+        replacement: appz-qa-worker-2
+      - source_labels: ['nodename']
+        regex: 'ip-192-168-130-193.us-east-2.compute.internal'
+        target_label: nodename
+        replacement: appz-prod-worker-1 
   - job_name: 'kube-state-metrics'
     static_configs:
     - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
