--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -29,14 +29,14 @@ scrape_configs:
     static_configs:
     - targets: ['172.31.17.121:9100','172.31.28.19:9100','172.31.25.240:9100','192.168.103.189:9100','192.168.163.143:9100','192.168.130.193:9100']
     metric_relabel_configs:
-      - source_labels: ['nodename']
+       - source_labels: ['nodename']
         regex: '(engine.master)'
         target_label: nodename
         replacement: appz-${1}
       - source_labels: ['nodename']
-        regex: 'k8s.worker.node.(.*)'
+        regex: 'k8s.(.*)'
         target_label: nodename
-        replacement: appz-dev-worker-${1}
+        replacement: appz-${1}
       - source_labels: ['nodename']
         regex: 'ip-192-168-103-189.us-east-2.compute.internal'
         target_label: nodename
