--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -36,10 +36,10 @@ scrape_configs:
         - '{job=~"kube-state-metrics|kubernetes-cadvisor"}'
     static_configs:
       - targets: ['192.168.1.34:9090']
-
+      
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['172.31.17.121:9100','172.31.28.19:9100','172.31.25.240:9100']
+    - targets: ['172.31.17.121:9100','172.31.28.19:9100','172.31.25.240:9100','192.168.103.189:9100','192.168.163.143:9100','192.168.130.193:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(engine.master)'
@@ -49,6 +49,20 @@ scrape_configs:
         regex: 'k8s.(.*)'
         target_label: nodename
         replacement: appz-${1}
+      - source_labels: ['nodename']
+        regex: 'ip-192-168-103-189.us-east-2.compute.internal'
+        target_label: nodename
+        replacement: appz-qa-worker-1
+      - source_labels: ['nodename']
+        regex: 'ip-192-168-163-143.us-east-2.compute.internal'
+        target_label: nodename
+        replacement: appz-qa-worker-2
+      - source_labels: ['nodename']
+        regex: 'ip-192-168-130-193.us-east-2.compute.internal'
+        target_label: nodename
+        replacement: appz-prod-worker-1 
+
+
 
   - job_name: 'kube-state-metrics'
     static_configs:
