--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -27,7 +27,7 @@ scrape_configs:
       
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['172.31.17.121:9100','172.31.28.19:9100','172.31.25.240:9100','192.168.103.189:9100','192.168.163.143:9100','192.168.130.193:9100']
+    - targets: ['172.31.1.176:9100','172.31.7.240:9100','172.31.18.212:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(engine.master)'
@@ -69,3 +69,32 @@ scrape_configs:
       regex: (.+)
       target_label: __metrics_path__
       replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
+      
+  - job_name: 'postgres_exporter'
+    #static_configs:
+    #- targets: ['postgres-ha-13-x:9187']
+    kubernetes_sd_configs:
+    - role: endpoints
+    
+    relabel_configs:
+    - source_labels: [__meta_kubernetes_namespace]
+      action: replace
+      target_label: namespace
+    - source_labels: [__meta_kubernetes_pod_name]
+      action: replace
+      target_label: pod
+      
+    - source_labels: [pod]
+      regex: postgres-ha-13.*
+      action: keep  
+
+    - source_labels: [__address__]
+      target_label: __address__
+      regex: '([^:]+)(:[5432]+)?'
+      replacement: '${1}'
+      action: drop
+      
+    - source_labels: [__address__]
+      regex: '.*'
+      target_label: instance
+      replacement: 'Appz${1}' 
