--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -56,8 +56,8 @@ scrape_configs:
       replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
       
   - job_name: 'postgres_exporter'
-    #static_configs:
-    #- targets: ['postgres-ha-13-x:9187']
+    static_configs:
+    - targets: ['postgres-ha-13-x:9187']
     kubernetes_sd_configs:
     - role: endpoints
     
