--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -37,6 +37,10 @@ scrape_configs:
         regex: 'k8s.(.*)'
         target_label: nodename
         replacement: appz-${1}
+        
+  - job_name: 'kube-state-metrics'
+    static_configs:
+    - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']     
       
   - job_name: 'kubernetes-cadvisor'
     scheme: https
