--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -39,7 +39,34 @@ scrape_configs:
   - job_name: 'kube-state-metrics'
     static_configs:
     - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
+  - job_name: 'postgres_exporter'
+    static_configs:
+    - targets: ['postgres-ha-13-x:9187']
+    kubernetes_sd_configs:
+    - role: endpoints
+    
+    relabel_configs:
+    - source_labels: [__meta_kubernetes_namespace]
+      action: replace
+      target_label: namespace
+    - source_labels: [__meta_kubernetes_pod_name]
+      action: replace
+      target_label: pod
+      
+    - source_labels: [pod]
+      regex: postgres-ha-13.*
+      action: keep  
 
+    - source_labels: [__address__]
+      target_label: __address__
+      regex: '([^:]+)(:[5432]+)?'
+      replacement: '${1}'
+      action: drop
+      
+    - source_labels: [__address__]
+      regex: '.*'
+      target_label: instance
+      replacement: 'Appz${1}' 
   - job_name: 'kubernetes-cadvisor'
     scheme: https
     tls_config:
