--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -52,7 +52,7 @@ scrape_configs:
       target_label: pod
       
     - source_labels: [pod]
-      regex: postgres-ha-13*
+      regex: postgres-ha-13-*
       action: keep  
 
     - source_labels: [__address__]
