--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -26,7 +26,7 @@ scrape_configs:
   
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['192.168.61.168:9100','192.168.61.195:9100','192.168.61.85:9100']
+    - targets: ['10.0.0.4:9100','10.0.0.6:9100','10.0.0.7:9100','10.0.0.5:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(engine.master)'
