--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -112,3 +112,19 @@ scrape_configs:
       regex: '.*'
       target_label: instance
       replacement: 'Appz${1}'
+
+  - job_name: 'blackbox'
+    metrics_path: /probe
+    params:
+     module: [http_2xx] 
+    static_configs:
+    - targets:
+#       - https://google.com/doesntexist
+#       - https://www.ecloudcontrol.com
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: localhost:9115
