--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -127,4 +127,4 @@ scrape_configs:
       - source_labels: [__param_target]
         target_label: instance
       - target_label: __address__
-        replacement: 172.31.25.240:9115
+        replacement: blackbox-exporter-0-2:9115
