--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -127,4 +127,8 @@ scrape_configs:
     - source_labels: [__address__]
       regex: '.*'
       target_label: instance
-      replacement: 'Appz${1}'      
+      replacement: 'Appz${1}'    
+      
+  - job_name: 'jmeter'
+    static_configs:
+    - targets: ['jmeter-0-1:9270']
