--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -129,3 +129,6 @@ scrape_configs:
       target_label: instance
       replacement: 'Appz${1}'    
       
+  - job_name: 'jmeter'
+    static_configs:
+    - targets: ['jmeter-0-1:9270']
