--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -81,3 +81,7 @@ scrape_configs:
       regex: (.+)
       target_label: __metrics_path__
       replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
+      
+  - job_name: 'jmeter'
+    static_configs:
+    - targets: ['jmeter-0-1:9270']
