--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -26,7 +26,7 @@ scrape_configs:
   
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['172.31.38.133:9100','172.31.42.93:9100','172.31.41.23:9100','172.31.39.107:9100']
+    - targets: ['172.31.38.133:9100','172.31.42.93:9100','172.31.41.23:9100','172.31.39.107:9100','192-168-110-131:9100','192-168-110-131:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(engine.master)'
@@ -36,6 +36,14 @@ scrape_configs:
         regex: 'k8s.(.*)'
         target_label: nodename
         replacement: appz-${1}
+      - source_labels: ['nodename']
+        regex: 'ip-192-168-110-131.us-east-2.compute.internal'
+        target_label: nodename
+        replacement: appz-prod-worker-1
+      - source_labels: ['nodename']
+        regex: 'ip-192-168-133-77.us-east-2.compute.internal'
+        target_label: nodename
+        replacement: appz-prod-worker-2  
   - job_name: 'kube-state-metrics'
     static_configs:
     - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
