--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -3,7 +3,8 @@ global:
   scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
   evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
   # scrape_timeout is set to the global default (10s).
-
+  external_labels:
+    datacenter: primary
 # Alertmanager configuration
 alerting:
   alertmanagers:
@@ -23,7 +24,19 @@ scrape_configs:
   - job_name: 'prometheus'
     static_configs:
     - targets: ['localhost:9090']
-  
+ 
+  - job_name: 'federation'
+    scrape_interval: 20s
+    scrape_timeout: 20s
+    scheme: https
+    metrics_path: /federate
+    honor_labels: true
+    params:
+      match[]:
+        - '{job=~"kube-state-metrics|kubernetes-cadvisor"}'
+    static_configs:
+     - targets: ['alpha-prod-prometheus-2-17.0383898a.lowtouch.cloud:443']
+
   - job_name: 'node-exporter'
     static_configs:
     - targets: ['172.31.38.133:9100','172.31.42.93:9100','172.31.41.23:9100','172.31.39.107:9100','192.168.110.131:9100','192.168.133.77:9100']
