--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -103,7 +103,7 @@ scrape_configs:
     - source_labels: [pod]
       #regex: '((.*)hellonode(.*))'
       #regex: '((.*)hellonode(.*))'|'kbfc(.*))'
-      regex: hellonode.*|kbfc.*|hntest.*
+      regex: apexaiq*
       action: keep
 
     - source_labels: [__address__]
