--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -81,7 +81,7 @@ scrape_configs:
   - job_name: 'yace'
     scrape_interval: 60s
     static_configs:
-          - targets: ['yace-0-29-0-29:5000']
+          - targets: ['yace-0-29:5000']
           
   - job_name: 'nodejs'
    
