--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -82,6 +82,10 @@ scrape_configs:
     scrape_interval: 60s
     static_configs:
           - targets: ['yace-0-29:5000']
+ 
+  - job_name: 'rabbitmq_exporter'
+    static_configs:
+          - targets: ['rabbitmq-3-9:15692']
           
   - job_name: 'nodejs'
    
