--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -33,7 +33,7 @@ scrape_configs:
     honor_labels: true
     params:
       match[]:
-        - '{job=~"kube-state-metrics|kubernetes-cadvisor|nodejs"}'
+        - '{job=~"kube-state-metrics|kubernetes-cadvisor|nodejs|rabbitmq_exporter"}'
     static_configs:
      - targets: ['alpha-prod-prometheus-2-17.0383898a.lowtouch.cloud:443']
 
