--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -33,7 +33,7 @@ scrape_configs:
     honor_labels: true
     params:
       match[]:
-        - '{job=~"kube-state-metrics|kubernetes-cadvisor|nodejs|rabbitmq_exporter"}'
+        - '{job=~"kube-state-metrics|kubernetes-cadvisor|nodejs|rabbitmq_exporter|redis"}'
     static_configs:
      - targets: ['alpha-prod-prometheus-2-17.0383898a.lowtouch.cloud:443']
 
@@ -77,6 +77,28 @@ scrape_configs:
       regex: (.+)
       target_label: __metrics_path__
       replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
+      
+  - job_name: 'redis'
+    kubernetes_sd_configs:
+    - role: endpoints
+    
+    relabel_configs:
+    - source_labels: [__meta_kubernetes_namespace]
+      action: replace
+      target_label: namespace
+    - source_labels: [__meta_kubernetes_pod_name]
+      action: replace
+      target_label: instance
+        
+    - source_labels: [instance]
+      regex: redis.*
+      action: keep  
+
+    - source_labels: [__address__]
+      target_label: __address__
+      regex: '([^:]+)(:[6379]+)?'
+      replacement: '${1}'
+      action: drop 
       
   - job_name: 'yace'
     scrape_interval: 60s
