--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -56,7 +56,15 @@ scrape_configs:
       - source_labels: ['nodename']
         regex: 'ip-192-168-133-77.us-east-2.compute.internal'
         target_label: nodename
-        replacement: appz-prod-worker-2  
+        replacement: appz-prod-worker-2 
+       - source_labels: ['nodename']
+        regex: 'ip-192-168-119-28.eu-west-3.compute.internal'
+        target_label: nodename
+        replacement: appz-dev2-worker-1
+      - source_labels: ['nodename']
+        regex: 'ip-192-168-143-65.eu-west-3.compute.internal'
+        target_label: nodename
+        replacement: appz-dev2-worker-2       
   - job_name: 'kube-state-metrics'
     static_configs:
     - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
