--- a/appz.yml
+++ b/appz.yml
@@ -5,13 +5,13 @@ app:
 
 build:
     version: 2.17
-    env: PROD
+    env: PROD2
     build_file: none
     output_files: output/*.zip
     image_template: prometheus-2.17
 
 deploy:
-    context: alpha/PROD
+    context: alpha/PROD2
     type: statefulset
     replicas: 1
     port:
