--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -9,7 +9,7 @@ alerting:
   alertmanagers:
   - static_configs:
     - targets:
-       - alert-manager-0-2:9093
+       - ecloud-alertmanager-0-2:9093
 
 # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 rule_files:
