--- a/appz.yml
+++ b/appz.yml
@@ -1,7 +1,7 @@
 app:
     name: prometheus
     code: prometheus
-    notify: appzdev@cloudbourne.co
+    notify: srswain@ecloudcontrol.com
 
 build:
     version: 2.17
@@ -11,7 +11,7 @@ build:
     image_template: prometheus-2.17
 
 deploy:
-    context: alpha/DEV
+    context: sranjan1995/DEV
     type: statefulset
     replicas: 1
     port:
